# besit-challenge

./: .coverage  .env  .env.example  .gitignore  Dockerfile  Justfile  README.md  pyproject.toml
app/: main.py
phinder_api/: __init__.py  main.py  state.py  utils.py  vt_utils.py
phinder_api/models/: response.py  vt_analysis.py
tests/: test_api.py
